# rosetta

./: .clang-format  .gitignore  CMakeLists.txt  README.md  benchmark  benchmark.py  benchmark.sh  requirements.txt  rosetta.code-workspace  rosetta.py  rosetta.sh  run.py  runner.py
benchmarks/: CMakeLists.txt  extralarge.problemsize.ini  large.problemsize.ini  medium.problemsize.ini  medium.problemsize.xml  mini.problemsize.ini  probed.problemsize.ini  small.problemsize.ini  zero.problemsize.ini
benchmarks/apps/qmcpack/grad_kernel/: cuda-newstyle.cu  cuda-oldstyle.cu
benchmarks/features/access_conditional/: CMakeLists.txt  access_conditional.cpp
benchmarks/features/access_localmem/: CMakeLists.txt  access_localmem.cpp
benchmarks/features/compute_sqrt/: CMakeLists.txt  compute_sqrt.cpp
benchmarks/features/compute_trancendental/: CMakeLists.txt  compute_trancendental.cpp
benchmarks/features/fuse/: fuse.omp_target.cxx  notargetfuse.omp_target.cxx  noteamsfuse.omp_target.cxx
benchmarks/features/sync_barrier/: CMakeLists.txt  compute_zero.cpp
benchmarks/idioms/: CMakeLists.txt  README.md
benchmarks/idioms/access_indirect/: CMakeLists.txt  access_indirect.cpp
benchmarks/idioms/assign/: assign.cu  assign.cxx  assign.hip  assign.omp_parallel.cxx  assign.omp_target.cxx  assign.omp_task.cxx  assign.sycl.cxx
benchmarks/idioms/comprehension/: CMakeLists.txt  comprehension.cpp
benchmarks/idioms/histogram/: histogram.cu  histogram.cxx  histogram.omp_parallel.cxx  histogram.omp_target.cxx
benchmarks/idioms/pairwise/: CMakeLists.txt  pairwise.cpp  pairwise.cu  pairwise.h  pairwise.omp_parallel.cpp  pairwise.omp_task.cpp  pairwise.openmp_parallel.cpp  pairwise.openmp_task.cpp  pairwise.sycl.cxx
benchmarks/idioms/pointwise/: CMakeLists.txt  pointwise.cpp  pointwise.cu  pointwise.cxx  pointwise.hip  pointwise.omp_parallel.cpp  pointwise.omp_parallel.cxx  pointwise.omp_target.cpp  pointwise.omp_target.cxx  pointwise.omp_task.cpp  pointwise.omp_task.cxx  pointwise.openmp_parallel.cpp  pointwise.openmp_target.cpp  pointwise.openmp_task.cpp  pointwise.sycl.cxx  synchronization.hpp
benchmarks/idioms/pointwise_inplace/: CMakeLists.txt  pointwise_inplace.cpp  pointwise_inplace.h
benchmarks/idioms/reduction/: CMakeLists.txt  reduction.cpp  reduction.cu  reduction.cxx  reduction.hip  reduction.omp_parallel.cpp  reduction.omp_parallel.cxx  reduction.omp_target.cpp  reduction.omp_target.cxx  reduction.omp_task.cpp  reduction.omp_task.cxx  reduction.sycl.cxx
benchmarks/qmcpack/grad_kernel/: cuda-oldstyle.cu  openmp.cpp
benchmarks/suites/: CMakeLists.txt  README.md  benchmarksuites.txt
benchmarks/suites/parboil/histogram/: histogram.cu  histogram.cxx  histogram.omp_parallel.cxx
benchmarks/suites/polybench/: CMakeLists.txt
benchmarks/suites/polybench/2mm/: 2mm.cu  2mm.cxx  2mm.hip  2mm.omp_parallel.cxx  2mm.omp_target.cxx  2mm.sycl.cxx  CMakeLists.txt
benchmarks/suites/polybench/3mm/: 3mm.cu  3mm.cxx  3mm.omp_parallel.cxx  3mm.omp_target.cxx  3mm.sycl.cxx  CMakeLists.txt
benchmarks/suites/polybench/adi/: CMakeLists.txt  adi.cu  adi.cxx  adi.hip  adi.omp_parallel.cxx  adi.omp_target.cxx  adi.sycl.cxx
benchmarks/suites/polybench/atax/: CMakeLists.txt  atax.cu  atax.cxx  atax.hip  atax.omp_parallel.cxx  atax.omp_target.cxx  atax.omp_task.cxx  atax.sycl.cxx
benchmarks/suites/polybench/bicg/: CMakeLists.txt  bicg.cu  bicg.cxx  bicg.hip  bicg.omp_parallel.cxx  bicg.omp_target.cxx  bicg.sycl.cxx
benchmarks/suites/polybench/cholesky/: CMakeLists.txt  cholesky-common.cxx  cholesky-common.h  cholesky.cu  cholesky.cxx  cholesky.hip  cholesky.omp_parallel.cxx  cholesky.omp_target.cxx  cholesky.omp_task.cxx  cholesky.sycl.cxx
benchmarks/suites/polybench/correlation/: CMakeLists.txt  correlation.cu  correlation.cxx  correlation.hip  correlation.omp_parallel.cxx  correlation.omp_target.cxx  correlation.sycl.cxx
benchmarks/suites/polybench/covariance/: CMakeLists.txt  covariance.cu  covariance.cxx  covariance.hip  covariance.omp_parallel.cxx  covariance.omp_target.cxx  covariance.sycl.cxx
benchmarks/suites/polybench/deriche/: CMakeLists.txt  deriche.cu  deriche.cxx  deriche.hip  deriche.omp_parallel.cxx  deriche.omp_target.cxx  deriche.sycl.cxx
benchmarks/suites/polybench/doitgen/: CMakeLists.txt  doitgen.cu  doitgen.cxx  doitgen.hip  doitgen.sycl.cxx  (+2 more)
benchmarks/synth/: CMakeLists.txt
benchmarks/synth/roofline_double_1/: CMakeLists.txt  roofline_double_1.cpp  roofline_double_1.h
rosetta/src/: CMakeLists.txt  cdflib.cpp  cdflib.hpp  const.c  const.cpp  const.cxx  gamma.c  gamma.cpp  gamma.cxx  gamma.hpp  igam.c  igam.cpp  incbet.c  incbet.cpp  incbi.c  incbi.cpp  incbi.cxx  mconf.h  mconf.hpp  mtherr.c  mtherr.cpp  mtherr.cxx  ndtr.c  ndtr.cpp  ndtr.cxx  ndtr.hpp  ndtri.c  ndtri.cpp  ndtri.cxx  ndtri.hpp  polevl.c  polevl.cpp  rosetta-common.cpp  rosetta-common.h  rosetta-cuda.cu  rosetta-openmp.cpp  rosetta-serial.cpp  rosetta-stat.cpp  rosetta-stat.h  rosetta-stat.hpp  (+4 more)
rosetta/src/rosetta/: __init__.py  benchmark.py  builder.py  common.py  driver.py  evaluator.py  evaluator_original.py  filtering.py  formatting.py  gen-stage1.py  invoke.py  prober.py  registry.py  rosetta_filter.py  runner.py  stat.py  table.py  verifier.py
rosetta/test/: CMakeLists.txt  __init__.py  context.py  list_tests.py  test_evaluate.py  test_filtering.py  test_managedbuilddir.py  test_report.py  test_run.py  test_stat.cpp  test_stat.py  test_statistics.py  test_support.py  test_userbuilddir_multiconfig.py  test_userbuilddir_ninja.py
src/: CMakeLists.txt  rosetta-serial.cpp  rosetta.cpp
src/idioms/: CMakeLists.txt
src/idioms/pairwise/: CMakeLists.txt  pairwise.cpp
src/idioms/pointwise/: CMakeLists.txt  pointwise.cpp  pointwise.cu  pointwise.h  pointwise.omp_parallel.cpp  pointwise.omp_target.cpp  pointwise.omp_taskloop.cpp  pointwise.parallel.omp.c  pointwise.seq.cpp
src/idioms/pointwise_inplace/: pointwise_inplace.cpp
src/qmcpack/grad_kernel/: cuda-newstyle.cu
system/: CMakeLists.txt
system/rosetta/src/: CMakeLists.txt  rosetta-openmp.cpp
system/src/: rosetta-cuda.cu
(+271 files in other folders)
